Stopped result from moving offscreen in mobile portrait

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -554,18 +554,22 @@ button {
             display: block;
 
             &--indoors {
-                margin-bottom: 1rem;
+                margin-bottom: 2rem;
             }
         }
     }
 
     .result {
+        height: 3.5rem;
+
         &__btn {
             padding: .7rem 1.4rem;
+            margin-right: 2rem;
         }
 
         &__text {
-            font-size: 2.5rem;
+            display: inline-block;
+            font-size: 1.9rem;
         }
     }
 }
